[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/icon.png" type="Texture" id=1]
[ext_resource path="res://entities/player.gd" type="Script" id=2]
[ext_resource path="res://assets/images/shoot-indicator.png" type="Texture" id=3]
[ext_resource path="res://assets/images/shoot-indicator-bg.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.4245
height = 3.48083

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( 144.909, 112.659 )
collision_layer = 2
collision_mask = 21
script = ExtResource( 2 )
weapon_scene_path = "res://entities/weapons/ranged_weapon.tscn"

[node name="icon" type="Sprite" parent="."]
position = Vector2( 0, 0.0992432 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AttackTimer" type="Timer" parent="."]

[node name="WeaponPivot" type="Node2D" parent="."]

[node name="WeaponSpawnPoint" type="Node2D" parent="WeaponPivot"]

[node name="ShootIndicator" type="TextureProgress" parent="WeaponPivot"]
margin_left = 17.0
margin_top = -28.7355
margin_right = 129.0
margin_bottom = 71.2645
rect_scale = Vector2( 1, 0.5 )
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeTimer" type="Timer" parent="."]
wait_time = 5.0

[node name="UpdateTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="TimeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -41.5375
margin_right = 20.0
margin_bottom = -27.5375
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotationTween" type="Tween" parent="."]
